successfully fixed the scrollbar alignment issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,16 +19,20 @@ html, body {
   font-family: "Nexa";
 }
 
-/* body::-webkit-scrollbar:horizontal {
+body {
+  overflow: none !important;
+}
+
+body::-webkit-scrollbar:horizontal {
   display: none !important;
-} */
+}
 
 /* scrollbar */
 
 /* width */
 ::-webkit-scrollbar {
-  width: 6px !important;
-  height: 26px !important;
+  width: 6px;
+  height: 20px;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
